[package]
name = "a_sabr_python"
version = "0.1.0"
edition = "2021"

[lib]
name = "a_sabr_python"
crate-type = ["cdylib"]

[dependencies]
a_sabr = { path = "../a-sabr" }
pyo3 = { version = "0.22.6", features = ["extension-module"] }

[features]
contact_work_area = ["a_sabr/contact_work_area"]
contact_suppression = ["a_sabr/contact_suppression"]
first_depleted = ["a_sabr/first_depleted"]
